[package]
name = "game"
version = "0.0.1"
edition = "2021"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
bincode = { version = "2.0.0-rc.2" }
rand = { version = "0.8" }
rand_distr = "0.4.3"