[package]
name = "game"
version = "0.0.1"
edition = "2021"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.1" }
bincode = { version = "2.0.0-rc.2" }
clap = { version = "4.0.18", features = ["derive"] }
iyes_loopless = "0.8.0"
rand = { version = "0.8" }
rand_distr = "0.4.3"
strum = "0.24"
strum_macros = "0.24"
